Test app shows feeback in the text view
Change-Id: Icc98580bb06d8001bed80cbc60964dbf75b3eccd

--- a/AdViewer/AdViewer/Base.lproj/Main.storyboard
+++ b/AdViewer/AdViewer/Base.lproj/Main.storyboard
@@ -261,6 +261,7 @@
                         <outlet property="textAdUnitHeight" destination="VM9-Yf-poE" id="2V2-et-jCg"/>
                         <outlet property="textAdUnitId" destination="Yea-N3-kPk" id="y6S-Yr-LsV"/>
                         <outlet property="textAdUnitWidth" destination="nbr-zG-Btu" id="v9h-iB-rXb"/>
+                        <outlet property="textFeedback" destination="ZlQ-DA-pB0" id="nlw-1T-N2d"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uFa-Gs-hzp" userLabel="First Responder" sceneMemberID="firstResponder"/>
