Adding interstitial ads functionality
Change-Id: Ica1e6945bb0a838f1415d9307e3ef8403f98a57a
jira:EE-101

--- a/AdViewer/AdViewer/Base.lproj/Main.storyboard
+++ b/AdViewer/AdViewer/Base.lproj/Main.storyboard
@@ -166,6 +166,27 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="qEM-Kz-VUJ">
+                                                    <rect key="frame" x="136" y="165" width="49" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="bannerInterstitialSwitched:" destination="fAG-V5-fqd" eventType="valueChanged" id="zeU-aP-lan"/>
+                                                    </connections>
+                                                </switch>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Interstitial" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXz-rU-DaC">
+                                                    <rect key="frame" x="206" y="170" width="76" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Banner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DbY-iW-bTE">
+                                                    <rect key="frame" x="57" y="170" width="55" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -258,6 +279,7 @@
                         </connections>
                     </tableView>
                     <connections>
+                        <outlet property="bannerInterstitialSwitch" destination="qEM-Kz-VUJ" id="yQk-uS-0RN"/>
                         <outlet property="textAdUnitHeight" destination="VM9-Yf-poE" id="2V2-et-jCg"/>
                         <outlet property="textAdUnitId" destination="Yea-N3-kPk" id="y6S-Yr-LsV"/>
                         <outlet property="textAdUnitWidth" destination="nbr-zG-Btu" id="v9h-iB-rXb"/>
